--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "prepublishOnly": "npm run build && npm run lint -c .eslintrc.prepublish.js nodes package.json"
   },
   "files": [
-    "dist"
+    "dist",
+    "native"
   ],
   "n8n": {
     "n8nNodesApiVersion": 1,
